# pymrio

./: .coveragerc  .gitignore  .notebook_test_sanitize.cfg  .readthedocs.yaml  .travis.yml  AGENTS.md  CHANGELOG.rst  CITATION  CLAUDE.md  CONTRIBUTING.rst  EROI universal mining machine.ipynb  Evolution of EROIs.ipynb  LICENCE  LICENSE  MANIFEST.in  README.md  README.rst  TODO.md  environment.yml  environment_dev.yml  format_and_test.sh  impacts_by_sector.ipynb  impacts_of_imports.ipynb  pop_FR_by_age_2011.xls  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  setup.py  tags
.cache/v/cache/: lastfailed
.github/workflows/: publish_pypi.yml  publish_test_pypi.yml  tests_and_coverage.yml
.history/pymrio/tools/: iobalance_20231013091728.py  iobalance_20231013091833.py  iobalance_20231013093220.py  iobalance_20231013093244.py  iobalance_20231013093400.py  iobalance_20231013093649.py  iobalance_20231013093924.py  iobalance_20231013094043.py  iobalance_20231018134515.py  iobalance_20231018134627.py  iobalance_20231018135342.py  iobalance_20231018135430.py  iobalance_20231018141645.py  iobalance_20231018143517.py  iobalance_20231018144006.py  iobalance_20231018144500.py  iobalance_20231018144650.py  iobalance_20231018152604.py  iomath_20231205162009.py
Evolution of EROI/: Evolution of EROI draft.lyx  Evolution of EROIs Until 2050 - code.ipynb  Evolution of EROIs Until 2050 - presentation.lyx  Evolution of EROIs Until 2050.lyx  Evolution of EROIs.ipynb  Greenpeace_scenarios.xlsx  Supplementary info & mixes.xlsx  all_results.xlsx  eroi_themis - deprecated.ipynb  eroi_themis.ipynb  erois_prices.pkl  erois_prices_wo_GW.pkl  io_functions.ipynb
doc/: Makefile  make.bat  readthedocs-pip-requirements.txt  rtd-requirements.txt
doc/notebooks/: pymrio_basic_introduction.ipynb  pymrio_directly_assign_attributes.ipynb  pymrio_exiobase_tutorial.ipynb
doc/notebooks/.ipynb_checkpoints/: pymrio_directly_assign_attributes-checkpoint.ipynb  pymrio_exiobase_tutorial-checkpoint.ipynb
doc/source/: api_references.rst  changelog.rst  conf.py  contribution.rst  development.rst  exploring.rst  handling.rst  index.rst  installation.rst  intro.rst  linking.rst  math.rst  math.tmp  pymrio.core.rst  pymrio.mrio_models.rst  pymrio.mrio_models.test_mrio.rst  terminology.rst
doc/source/api_doc/: pymrio.ClassificationData.rst  pymrio.Extension.calc_system.rst  pymrio.Extension.characterize.rst  pymrio.Extension.contains.rst  pymrio.Extension.diag_stressor.rst  pymrio.Extension.fullmatch.rst  pymrio.Extension.get_row_data.rst  pymrio.Extension.get_rows.rst  pymrio.Extension.match.rst  pymrio.Extension.per_source.rst  pymrio.Extension.plot_account.rst  pymrio.IOSystem.aggregate.rst  pymrio.IOSystem.calc_all.rst  pymrio.IOSystem.calc_system.rst  pymrio.IOSystem.contains.rst  pymrio.IOSystem.copy.rst  pymrio.IOSystem.extension_contains.rst  pymrio.IOSystem.extension_fullmatch.rst  pymrio.IOSystem.extension_match.rst  pymrio.IOSystem.find.rst  pymrio.IOSystem.fullmatch.rst  pymrio.IOSystem.get_DataFrame.rst  pymrio.IOSystem.get_Y_categories.rst  pymrio.IOSystem.get_bilateral_trade.rst  pymrio.IOSystem.get_extensions.rst  pymrio.IOSystem.get_gross_trade.rst  pymrio.IOSystem.get_index.rst  pymrio.IOSystem.get_regions.rst  pymrio.IOSystem.get_sectors.rst  pymrio.IOSystem.match.rst  pymrio.IOSystem.remove_extension.rst  pymrio.IOSystem.rename_Y_categories.rst  pymrio.IOSystem.rename_regions.rst  pymrio.IOSystem.rename_sectors.rst  pymrio.IOSystem.report_accounts.rst  pymrio.IOSystem.reset_to_coefficients.rst  pymrio.IOSystem.reset_to_flows.rst  pymrio.IOSystem.save.rst  pymrio.IOSystem.save_all.rst  pymrio.IOSystem.set_index.rst  (+56 more)
doc/source/notebooks/: Adjusting.ipynb  Adjusting.py  GLAM_EXIO_link.ipynb  GLAM_EXIO_link.py  adjusting.ipynb  adjusting.py  advanced_group_stressors.ipynb  advanced_group_stressors.py  aggregation_examples.ipynb  aggregation_examples.py  autodownload.ipynb  autodownload.py  buildflowmatrix.ipynb  convert.ipynb  convert.py  eora26_parsing.ipynb  exiobase_parsing.ipynb  explore.ipynb  explore.py  extract_data.ipynb  extract_data.py  full_tutorial.ipynb  full_tutorial.py  jupytext.toml  load_save_export.ipynb  load_save_export.py  metadata.ipynb  metadata.py  pymrio_directly_assign_attributes.ipynb  pymrio_directly_assign_attributes.py  stressor_characterization.ipynb  stressor_characterization.py  wiod_parsing.ipynb  working_with_eora26.ipynb  working_with_exiobase.ipynb  working_with_exiobase.py  working_with_gloria.ipynb  working_with_gloria.py  working_with_oecd_icio.ipynb  working_with_wiod.ipynb  (+1 more)
pymrio/: OLD.py  __init__.py  pymrio.py  version.py
pymrio/aux/: __init__.py
pymrio/aux/GLAM/: EXIO382_to_GLAM202410.tsv  EXIO39_to_GLAM202410.tsv  GLAMprocessing.py  __init__.py
pymrio/core/: classes.py  constants.py  fileio.py  mriosystem.py  tags
pymrio/htmlcov/: __init___py.html  core___init___py.html  core_constants_py.html  core_fileio_py.html  core_mriosystem_py.html  index.html  status.json  tests_test_aggregation_py.html  tests_test_core_py.html  tests_test_integration_py.html  tests_test_math_py.html  tests_test_outputs_py.html  tests_test_parsers_py.html  tests_test_util_py.html  tools___init___py.html  tools_iodownloader_py.html  tools_iomath_py.html  tools_iometadata_py.html  tools_ioparser_py.html  tools_ioutil_py.html  version_py.html
pymrio/mrio_models/exio3_ixi/: sectors.tsv  valueadded.tsv
pymrio/mrio_models/exio3_pxp/: finaldemand.tsv  sectors.tsv
pymrio/tests/: full_run.py  test_aggregation.py  test_core.py  test_integration.py  test_math.py  test_outputs.py  test_parsers.py  test_util.py
pymrio/tools/: <Plug>CompletorTrigger  __init__.py  gloria_urls.json  ioclass.py  iodownloader.py  iofunctions.py  iohem.py  iomath.py  iometadata.py  ioparser.py  iosnac.py  ioutil.py  parser.py  tags  tshelper.py  util.py
tests/: conftest.py  test_aggregation.py  test_balance.py  test_core.py  test_hem.py  test_integration.py  test_math.py  test_outputs.py  test_parsers.py  test_ts_func.py  test_util.py
~/tmp/: file_parameters.json  metadata.json
(+127 files in other folders)
